<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="parent"
    android:background="@drawable/bg_login"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".SignUpActivity"
        android:layout_marginBottom="20dp">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="24dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="24dp" />

            <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/ic_launcher_foreground"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                app:layout_constraintStart_toStartOf="@+id/guideline_left"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/et_bg"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="16dp"
                android:maxLines="1"
                android:cursorVisible="false"
                android:textColor="@color/login_form_details"
                android:textColorHint="@color/login_form_details"
                app:layout_constraintEnd_toStartOf="@id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/icon" />

            <EditText
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/et_bg"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:maxLines="1"
                android:cursorVisible="false"
                android:textColor="@color/login_form_details"
                android:textColorHint="@color/login_form_details"
                app:layout_constraintEnd_toStartOf="@id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/username" />

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/et_bg"
                android:hint="@string/password"
                android:maxLines="1"
                android:inputType="textPassword"
                android:padding="16dp"
                android:cursorVisible="false"
                android:textColor="@color/login_form_details"
                android:textColorHint="@color/login_form_details"
                app:layout_constraintEnd_toStartOf="@id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <EditText
                android:id="@+id/r_string"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/et_bg"
                android:hint="@string/r_string"
                android:maxLines="1"
                android:padding="16dp"
                android:cursorVisible="false"
                android:textColor="@color/login_form_details"
                android:textColorHint="@color/login_form_details"
                app:layout_constraintEnd_toStartOf="@id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <TextView
                android:id="@+id/choose_direction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/choose_directions"
                android:textColor="@color/login_form_details"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                app:layout_constraintStart_toStartOf="@+id/guideline_left"
                app:layout_constraintTop_toBottomOf="@id/r_string" />

        <LinearLayout
            android:id="@+id/dir_1_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/dir_2_layout"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/choose_direction">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/dir_1_drop_down"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/login_form_details"
                android:layout_weight="0.45"
                android:gravity="center"
                app:layout_constraintStart_toEndOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/choose_direction" />

            <SeekBar
                android:id="@+id/dir_1_steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="0.45"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                app:layout_constraintTop_toBottomOf="@+id/choose_direction" />

            <TextView
                android:id="@+id/dir_1_steps_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="0.1"
                android:gravity="center"
                android:textColor="@color/login_form_details"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dir_2_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/btn_signup"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/dir_1_layout">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/dir_2_drop_down"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="0.45"
                android:gravity="center"
                android:backgroundTint="@color/login_form_details"
                app:layout_constraintStart_toEndOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/choose_direction" />

            <SeekBar
                android:id="@+id/dir_2_steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="0.45"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                app:layout_constraintTop_toBottomOf="@+id/choose_direction" />

            <TextView
                android:id="@+id/dir_2_steps_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="0.1"
                android:gravity="center"
                android:textColor="@color/login_form_details"
                android:textSize="16sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/purple"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/login_form_details"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/dir_2_layout" />

        <TextView
            android:id="@+id/log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/signed_up"
            android:textColor="@color/login_form_details"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/btn_signup" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>